@@ -119,7 +119,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-javaagent:${io.opentelemetry.javaagent:opentelemetry-agent-for-testing:jar}</argLine>
+                    <argLine>
+                        -Dnet.bytebuddy.experimental=${net.bytebuddy.experimental}
+                        -javaagent:${io.opentelemetry.javaagent:opentelemetry-agent-for-testing:jar}
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
